adjust minor responsive

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="link-container">
-      <button class="btn">Don't click me</button>
+      <button onclick="window.location.href = 'https://www.youtube.com/watch?v=wZZ7oFKsKzY';" class="btn">Don't click me</button>
       <ul class="link-list">
         <li><a href="https://minhbui-porfolio-dev.netlify.com/"><i class="fab fa-dev"></i>Porfolio</a></li>
         <li><a href="https://www.facebook.com/Nekoroden"><i class="fab fa-facebook-f"></i>Facebook Page</a></li>
